--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -7,8 +7,18 @@ jobs:
     if: "!startsWith(github.ref, 'refs/tags/') && !contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     env:
-      TEST_DATA_HOME: $HOME/data
+      TEST_DATA_HOME: /home/runner/sdcflows-tests
+      FSLDIR: /usr/share/fsl/5.0
       FSLOUTPUTTYPE: NIFTI_GZ
+      FSLMULTIFILEQUIT: TRUE
+      POSSUMDIR: /usr/share/fsl/5.0
+      FSLTCLSH: /usr/bin/tclsh
+      FSLWISH: /usr/bin/wish
+      AFNI_MODELPATH: /usr/lib/afni/models
+      AFNI_IMSAVE_WARNINGS: NO
+      AFNI_TTATLAS_DATASET: /usr/share/afni/atlases
+      AFNI_PLUGINPATH: /usr/lib/afni/plugins
+      ANTSPATH: /usr/lib/ants
     strategy:
       max-parallel: 5
       matrix:
@@ -27,14 +37,12 @@ jobs:
       id: conda
       with:
         path: |
-          /usr/share/miniconda
-          $CONDA/
-          $HOME/.cache/pip
+          /usr/share/miniconda/pkgs
+          /home/runner/.cache/pip
         key: python-${{ matrix.python-version }}-v2
         restore-keys: |
           python-${{ matrix.python-version }}-
     - name: Install DataLad
-      if: steps.conda.outputs.cache-hit != 'true'
       run: |
         $CONDA/bin/conda install -c conda-forge git-annex datalad pip
         $CONDA/bin/pip install datalad-osf
@@ -47,7 +55,7 @@ jobs:
 
     - uses: actions/cache@v2
       with:
-        path: $HOME/.cache/templateflow
+        path: ~/.cache/templateflow
         key: tf-cache-v1
         restore-keys: |
           tf-cache-
@@ -57,7 +65,7 @@ jobs:
 
     - uses: actions/cache@v2
       with:
-        path: $HOME/data
+        path: ${{ env.TEST_DATA_HOME }}
         key: data-cache-v1
         restore-keys: |
           data-cache-
@@ -91,7 +99,9 @@ jobs:
       run: |
         bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh);
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends fsl afni ants
+        sudo apt-get install -y --no-install-recommends fsl afni
+        sudo mkdir -p $ANTSPATH
+        curl -sSL "https://dl.dropbox.com/s/gwf51ykkk5bifyj/ants-Linux-centos6_x86_64-v2.3.4.tar.gz" | sudo tar -xzC $ANTSPATH --strip-components 1
 
     - name: Install FreeSurfer's mri_robust_template
       env:
@@ -104,6 +114,8 @@ jobs:
 
     - name: Run pytest with coverage
       run: |
+        export LD_LIBRARY_PATH=/usr/lib/fsl/5.0:$LD_LIBRARY_PATH
+        export PATH=/usr/lib/ants:/usr/lib/fsl/5.0:/usr/lib/afni/bin:$PATH
         $CONDA/bin/pytest -v --cov sdcflows --cov-report xml:cov.xml --doctest-modules sdcflows
 
     - name: Submit code coverage
