--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -1,10 +1,10 @@
 name: Tests ported from Travis
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build-linux:
-    if: "!startsWith(github.ref, 'refs/tags/') && !contains(github.event.head_commit.message, '[skip ci]')"
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
     env:
       TEST_DATA_HOME: /home/runner/sdcflows-tests
