--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,7 @@ max-line-length = 99
 doctests = False
 ignore =
     W503
+    E231
 exclude =
     *build/
     docs/sphinxext/
@@ -99,7 +100,7 @@ per-file-ignores =
 [tool:pytest]
 norecursedirs = .git
 addopts = -vsx --doctest-modules
-doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
+doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE NUMBER
 env =
     PYTHONHASHSEED=0
 filterwarnings =
