--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ setup_requires =
 install_requires =
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
-    niworkflows ~= 1.3.0
+    niworkflows >= 1.4.0rc0
     numpy
     pybids >= 0.11.1
     templateflow >= 0.6
