--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ description = Susceptibility Distortion Correction (SDC) workflows for EPI MR sc
 license = Apache-2.0
 long_description = file:README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
+name = sdcflows
 project_urls =
     Documentation = https://www.nipreps.org/sdcflows
     GitHub = https://github.com/nipreps/sdcflows
@@ -24,6 +25,7 @@ python_requires = >=3.6
 setup_requires =
     setuptools >= 42.0
     setuptools_scm >= 3.4
+    setuptools_scm_git_archive
     toml
 install_requires =
     nibabel >=3.0.1
@@ -38,6 +40,7 @@ test_requires =
     pytest
 packages = find:
 include_package_data = True
+zip_safe = True
 
 [options.exclude_package_data]
 * = tests
@@ -69,15 +72,6 @@ sdcflows =
     data/*.nii.gz
     data/*.mat
     data/flirtsch/*.cnf
-    VERSION
-
-[versioneer]
-VCS = git
-style = pep440
-versionfile_source = sdcflows/_version.py
-versionfile_build = sdcflows/_version.py
-tag_prefix =
-parentdir_prefix =
 
 [flake8]
 max-line-length = 99
