ENH: Add a memory check to dynamically limit interpolation blocksize
With very dense coefficients fields, we need to allocate a sparse
array of npixels x ncoefficients x 3-D x 32-bit.
This allocation is short-lived and can be chunked in segments.

This PR dynamically adjusts the chunk size to the actual amount of
free memory.

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,8 @@ doc =
     sphinxcontrib-versioning
 docs =
     %(doc)s
+mem =
+    psutil
 tests =
     pytest
     pytest-xdist >= 2.0
@@ -64,6 +66,7 @@ tests =
     coverage
 all =
     %(doc)s
+    %(mem)s
     %(tests)s
 
 [options.package_data]
