--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,10 @@ install_requires =
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
     niworkflows >= 1.4.0rc0
+    numpy <1.20; python_version < "3.7"
     numpy
     pybids >= 0.11.1
+    scikit-image
     templateflow >= 0.6
 test_requires =
     codecov
