--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ jobs:
           command: |
             datalad install -r https://github.com/nipreps-data/ds000054.git
             datalad update --merge -d ds000054/
-            datalad get -r -d ds000054/ ds000054/sub-100185/fmap/*
+            datalad get -r -J 2 -d ds000054/ ds000054/*
 
       - save_cache:
           key: data-v4-{{ .Branch }}-{{ .BuildNum }}
