--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,15 +101,15 @@ jobs:
           name: Install ds001771
           command: |
             datalad install -r https://github.com/nipreps-data/ds001771.git
-            datalad update --merge -d ds001771/
+            datalad update -r --merge -d ds001771/
             datalad get -r -d ds001771/ ds001771/sub-36/fmap/*
 
       - run:
           name: Install ds000054
           command: |
             datalad install -r https://github.com/nipreps-data/ds000054.git
-            datalad update --merge -d ds000054/
-            datalad get -r -J 2 -d ds000054/ ds000054/*
+            datalad update -r --merge -d ds000054/
+            datalad get -r -J 2 -d ds000054/ ds000054/* ds000054/derivatives/*
 
       - save_cache:
           key: data-v4-{{ .Branch }}-{{ .BuildNum }}
