--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
     niworkflows >= 1.4.0rc0
     numpy
     pybids >= 0.11.1
-    scikit-image
+    scikit-image >= 0.18
     svgutils != 0.3.2
     templateflow >= 0.6
 test_requires =
