--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,7 +201,9 @@ jobs:
           no_output_timeout: 60m
           command: |
             cd /tmp/src/sdcflows
-            pyenv local 3.7.0
+            export PY3=$(pyenv versions | grep '3\.' |
+                         sed -e 's/.* 3\./3./' -e 's/ .*//')
+            pyenv local $PY3
             python3 -m pip install "setuptools ~= 42.0" "setuptools_scm[toml] >= 3.4" "pip>=10.0.1"
 
             # Get version, update files.
@@ -320,7 +322,9 @@ jobs:
       - run:
           name: Submit unit test coverage
           command: |
-            pyenv local 3.7.0
+            export PY3=$(pyenv versions | grep '3\.' |
+                         sed -e 's/.* 3\./3./' -e 's/ .*//')
+            pyenv local $PY3
             python3 -m pip install codecov
             cd /tmp/src/sdcflows
             python3 -m codecov --file /tmp/tests/unittests.xml \
