--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires =
     numpy
     pybids >= 0.11.1
     scikit-image
+    svgutils != 0.3.2
     templateflow >= 0.6
 test_requires =
     codecov
