--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,13 @@ jobs:
             datalad get -r -d ds001771/ ds001771/sub-36/*
 
       - run:
+          name: Install ds000206
+          command: |
+            datalad install -r https://github.com/nipreps-data/ds000206.git
+            datalad update -r --merge -d ds000206/
+            datalad get -r -d ds000206/ ds000206/sub-05/*
+
+      - run:
           name: Install ds000054
           command: |
             datalad install -r https://github.com/nipreps-data/ds000054.git
