--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering :: Image Recognition
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: Apache Software License
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
