MAINT: Update tests after changes in ds001771's structure
The new tests also exercise the problems being addressed in #197.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,7 @@ jobs:
             datalad install -r https://github.com/nipreps-data/ds001771.git
             datalad update -r --merge -d ds001771/
             datalad get -r -d ds001771/ ds001771/sub-36/*
+            datalad get -r -d ds001771/derivatives ds001771/derivatives/openneuro/sub-36/*
 
       - run:
           name: Install ds000206
