fix: pin nitransforms-20.0.0rc4 with fix for ANTs' ``.mat``

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
     niworkflows >= 1.4.0rc5
+    nitransforms >= 20.0.0rc4
     numpy
     pybids >= 0.11.1
     scikit-image >= 0.18
