--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,7 +3,7 @@ git+https://github.com/rwblair/sphinxcontrib-versioning.git@39b40b0b84bf872fc398
 nbsphinx
 niflow-nipype1-workflows ~= 0.0.1
 nipype>=1.3.1
-git+https://github.com/nipreps/niworkflows.git@master
+niworkflows>=1.4.0rc0<, 1.5
 packaging
 pydot>=1.2.3
 pydotplus
