enh: rotate fieldmap to each specific frame of the target through the head-motion correction matrices

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ setup_requires =
     setuptools_scm_git_archive
     toml
 install_requires =
+    attrs >= 20.1.0
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
     niworkflows >= 1.4.0rc5
