--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ install_requires =
     attrs >= 20.1.0
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
-    niworkflows >= 1.4.0rc5
+    niworkflows @ git+https://github.com/nipreps/niworkflows.git@master
     nitransforms >= 20.0.0rc4
     numpy
     pybids >= 0.11.1
