maint: deep revision of dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,15 +34,17 @@ install_requires =
     niworkflows @ git+https://github.com/nipreps/niworkflows.git@master
     nitransforms >= 20.0.0rc4
     numpy
-    pybids >= 0.11.1
+    pybids >= 0.12.1
     scikit-image >= 0.18
-    scipy ~= 1.6.1
-    svgutils != 0.3.2
+    scipy ~= 1.6
     templateflow >= 0.6
 test_requires =
     codecov
     coverage
     pytest
+    pytest-cov
+    pytest-env
+    pytest-xdist
 packages = find:
 include_package_data = True
 zip_safe = True
@@ -52,27 +54,18 @@ zip_safe = True
 
 [options.extras_require]
 doc =
-    sphinx >= 2.1.2, <3
-    pydot >= 1.2.3
+    sphinx
+    pydot
     pydotplus
     sphinx_rtd_theme
-    sphinxcontrib-apidoc ~= 0.3.0
-    sphinxcontrib-napoleon
     sphinxcontrib-versioning
 docs =
     %(doc)s
 mem =
     psutil
-tests =
-    pytest
-    pytest-xdist >= 2.0
-    pytest-cov == 2.10.1
-    pytest-env
-    coverage
 all =
     %(doc)s
     %(mem)s
-    %(tests)s
 
 [options.package_data]
 sdcflows =
