fix: add tests as extra, since test_requires seems useless

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,13 +38,6 @@ install_requires =
     scikit-image >= 0.18
     scipy ~= 1.6
     templateflow >= 0.6
-test_requires =
-    codecov
-    coverage
-    pytest
-    pytest-cov
-    pytest-env
-    pytest-xdist
 packages = find:
 include_package_data = True
 zip_safe = True
@@ -63,9 +56,21 @@ docs =
     %(doc)s
 mem =
     psutil
+
+test =
+    codecov
+    coverage
+    pytest
+    pytest-cov
+    pytest-env
+    pytest-xdist
+tests =
+    %(test)s
+
 all =
     %(doc)s
     %(mem)s
+    %(test)s
 
 [options.package_data]
 sdcflows =
