--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,7 @@
-docs_deploy: &docs
-  docker:
-    - image: node:16.8.0
-  working_directory: /tmp/gh-pages
-  steps:
-    - run:
-        name: Check whether this is the original repo
-        command: |
-          if [[ "$CIRCLE_PROJECT_USERNAME" != "nipreps" ]]; then
-              echo "Not in nipreps/sdcflows - skipping docs deploy."
-              circleci step halt
-          fi
-    - add_ssh_keys:
-        fingerprints:
-          - "46:48:1e:6d:00:0e:f2:f8:e5:aa:b9:aa:da:eb:59:4e"
-    - run:
-        name: Install gh-pages tool
-        command: |
-          npm install -g --silent gh-pages@3.2.3
-    - checkout
-    - run:
-        name: Set git settings
-        command: |
-          git config user.email "nipreps@gmail.com"
-          git config user.name "Documentation Push"
-    - attach_workspace:
-        at: docs/_build
-    - run:
-        name: Disable jekyll builds
-        command: touch docs/_build/html/.nojekyll
-    - run:
-        name: Deploy docs to gh-pages branch
-        command: gh-pages --no-history --dotfiles --message "doc(update) [skip ci]" --dist docs/_build/html
+version: 2.1
+orbs:
+  docker: circleci/docker@1.6.0
 
-version: 2
 jobs:
   cache_test_data:
     docker:
@@ -349,7 +318,7 @@ jobs:
 
   build_docs:
     docker:
-      - image: python:3.7.4
+      - image: circleci/python:3.8.5
     working_directory: /tmp/gh-pages
     environment:
       - FSLOUTPUTTYPE: NIFTI
@@ -370,44 +339,11 @@ jobs:
             python setup.py --version
       - run:
           name: Build only this commit
-          command: make -C docs SPHINXOPTS="-W" BUILDDIR="_build/no_version_html" html
-      - store_artifacts:
-          path: ./docs/_build/no_version_html/html
-          destination: noversion
-      - run:
-          name: Stop or generate versioned docs?
           command: |
-            set +e
-            force_versioned="$( git log --format=oneline -n 1 $CIRCLE_SHA1 | grep -i -E '\[docs?[ _]?versions?\]' )"
-            set -e
-            if [[ "x${CIRCLE_TAG}" = "x" && "${CIRCLE_BRANCH}" != "master" && "x${force_versioned}" = "x" ]]; then
-              echo "Not a tag or master branch - skipping versioned docs."
-              circleci step halt
-            fi
-      - run:
-          name: Clean-up nonversioned docs.
-          command: make -C docs clean
-      - restore_cache:
-          keys:
-            - docs-v2-{{ .Branch }}-{{ .Revision }}
-            - docs-v2-{{ .Branch }}-
-            - docs-v2-master
-            - docs-v2-
-          paths:
-            - ./docs/_build
-      - run:
-          name: Generate Versioned Docs
-          command: make -f ./docs/Makefile versioned CURBRANCH=${CIRCLE_TAG:-$CIRCLE_BRANCH}
-      - save_cache:
-          key: docs-v2-{{ .Branch }}-{{ .Revision }}
-          paths:
-            - ./docs/_build
-      - persist_to_workspace:
-          root: docs/_build
-          paths: html
+            BRANCH=$( echo $CIRCLE_BRANCH | sed 's+/+_+g' )
+            make -C docs SPHINXOPTS="-W" BUILDDIR="$HOME/docs" CURBRANCH=${CIRCLE_TAG:-$BRANCH} html
       - store_artifacts:
-          path: ./docs/_build/html/html
-          destination: versioned
+          path: ~/docs/
 
   deploy_docker:
     machine:
@@ -507,12 +443,6 @@ jobs:
             python3 -m twine check dist/*
             python3 -m twine upload dist/* --non-interactive
 
-  deploy_docs_tag:
-    <<: *docs
-
-  deploy_docs_master:
-    <<: *docs
-
 workflows:
   version: 2
   build_deploy:
@@ -569,25 +499,5 @@ workflows:
             branches:
               ignore:
                 - /tests?\/.*/
-            tags:
-              only: /.*/
-
-      - deploy_docs_master:
-          requires:
-            - build_n_pytest
-            - test_package
-            - build_docs
-          filters:
-            branches:
-              only: /master/
-            tags:
-              ignore: /.*/
-
-      - deploy_docs_tag:
-          requires:
-            - deploy_docker
-          filters:
-            branches:
-              ignore: /.*/
             tags:
               only: /.*/
