maint: new documentation build system

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,11 +47,12 @@ zip_safe = True
 
 [options.extras_require]
 doc =
-    sphinx
+    furo ~= 2021.10.09
     pydot
     pydotplus
-    sphinx_rtd_theme
-    sphinxcontrib-versioning
+    sphinx
+    sphinxcontrib-apidoc
+    sphinxcontrib-napoleon
 docs =
     %(doc)s
 mem =
