--- a/.github/workflows/docs-build-update.yml
+++ b/.github/workflows/docs-build-update.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Build docs
       run: |
-          make -C docs/ SPHINXOPTS="-W" BUILDDIR="$HOME/docs" CURBRANCH="${CURBRANCH:-html}" html
+          make -C docs/ SPHINXOPTS="-W" BUILDDIR="$HOME/docs" OUTDIR="${CURBRANCH:-html}" html
 
     - name: Push created tag to gh-pages
       if: startsWith(github.ref, 'refs/tags/')
