--- a/.github/workflows/docs-build-update.yml
+++ b/.github/workflows/docs-build-update.yml
@@ -69,17 +69,18 @@ jobs:
         git commit -m "rel(${CURBRANCH}): Update docs of ${MAJOR_MINOR} series" || true
         git push
 
-    - name: Push "master" docs to gh-pages after a PR is merged
-      if: github.event.pull_request.merged == true
+    - name: Push "master" docs to gh-pages after a push to master (typically, a PR merge).
+      if: github.ref == 'refs/heads/master'
       run: |
         if [[ "${CURBRANCH}" != "master" ]]; then
             echo "$CURBRANCH is not the default development branch"
             exit 1
         fi
         git checkout -b gh-pages origin/gh-pages
-        git rm -r master/
+        git rm -r master/ || true
         # It is fundamental that the directory does not exist at all.
         rm -rf master
         cp -r $HOME/docs/$CURBRANCH $PWD/master
+        git add master
         git commit -am "docs(master): Update docs of development line" || true
         git push
