--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 attrs>=20.1.0
 nibabel>=3.0.1
 nipype<2.0,>=1.5.1
-niworkflows@ git+https://github.com/nipreps/niworkflows.git@master
+niworkflows~=1.4.2
 nitransforms~=21.0.0
 numpy
 pybids>=0.12.1
