ENH: Add CLI to detect usable estimators within a BIDS dataset
Backport gh-257

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,6 +81,10 @@ sdcflows =
     data/*.mat
     data/flirtsch/*.cnf
 
+[options.entry_points]
+console_scripts =
+    sdcflows-find-estimators=sdcflows.cli.find_estimators:main
+
 [flake8]
 max-line-length = 99
 doctests = False
