--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ nibabel>=3.0.1
 nipype<2.0,>=1.5.1
 niworkflows<1.6,>=1.4.2
 nitransforms>=21.0.0
-numpy
+numpy>=1.21.0
 pybids>=0.12.1
 scikit-image>=0.18
 scipy>=1.6.0
