--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ install_requires =
     nipype >=1.5.1,<2.0
     niworkflows >= 1.4.2, < 1.6
     nitransforms >= 21.0.0
-    numpy
+    numpy >= 1.21.0
     pybids >= 0.12.1
     scikit-image >= 0.18
     scipy >= 1.6.0
