--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     attrs >= 20.1.0
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
+    traits <6.4
     niworkflows ~= 1.6.0
     nitransforms >= 21.0.0
     numpy >= 1.21.0
