--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,7 +3,8 @@ furo ~= 2021.10.09
 matplotlib >= 2.2.0
 nibabel
 nipype >= 1.5.1
-niworkflows ~= 1.4.0
+traits < 6.4
+niworkflows ~= 1.6.0
 numpy
 packaging
 pydot >= 1.2.3
