maint: pin niworkflows' latest release (1.6.3)
Co-authored-by: Mathias Goncalves <mathiasg@stanford.edu>

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,13 +32,13 @@ install_requires =
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
     traits <6.4
-    niworkflows ~= 1.6.0
+    niworkflows ~= 1.6.3
     nitransforms >= 21.0.0
     numpy >= 1.21.0
-    pybids >= 0.12.1
+    pybids >= 0.15.1
     scikit-image >= 0.18
     scipy >= 1.6.0
-    templateflow >= 0.6
+    templateflow
 packages = find:
 include_package_data = True
 zip_safe = True
