--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@
 attrs>=20.1.0
 nibabel>=3.0.1
 nipype<2.0,>=1.5.1
-niworkflows<1.6,>=1.4.2
+traits<6.4
+niworkflows~=1.6.3
 nitransforms>=21.0.0
 numpy>=1.21.0
-pybids>=0.12.1
+pybids>=0.15.1
 scikit-image>=0.18
 scipy>=1.6.0
-templateflow>=0.6
+templateflow
