--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ install_requires =
     nibabel >=3.0.1
     nipype >=1.5.1,<2.0
     traits <6.4
-    niworkflows ~= 1.6.3
+    niworkflows @ git+https://github.com/nipreps/niworkflows.git@master
     nitransforms >= 21.0.0
     numpy >= 1.21.0
     pybids >= 0.15.1
