--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 42.0", "wheel", "setuptools_scm[toml] >= 3.4"]
+requires = ["setuptools >= 42.0", "wheel", "setuptools_scm[toml] >= 3.4", "Cython >= 0.29", "numpy"]
 
 [tool.setuptools_scm]
 write_to = "sdcflows/_version.py"
