--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ install_requires =
     templateflow
 packages = find:
 include_package_data = True
-zip_safe = True
+zip_safe = False
 
 [options.exclude_package_data]
 * = tests
