--- a/.github/workflows/docs-build-update.yml
+++ b/.github/workflows/docs-build-update.yml
@@ -6,12 +6,16 @@ on:
     branches: [ 'doc/*', 'docs/*', master, "maint/*" ]
     tags: [ '*' ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         ssh-key: "${{ secrets.NIPREPS_DEPLOY }}"
         fetch-depth: 0
