--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,6 +10,13 @@ on:
   pull_request:
     branches: [ master, 'maint/*' ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
 jobs:
   build:
     if: "!startsWith(github.ref, 'refs/tags/') && !contains(github.event.head_commit.message, '[skip ci]')"
@@ -20,15 +27,15 @@ jobs:
         pip: ["pip==21.2", "pip~=22.0"]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Fetch all tags (for setuptools_scm to work)
       run: |
         /usr/bin/git -c protocol.version=2 fetch --tags --prune --unshallow origin
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: actions/cache@v1
+    - uses: actions/cache@v3
       with:
         path: $HOME/.cache/pip
         key: pip-cache-v1
@@ -86,10 +93,10 @@ jobs:
   flake8:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v3
+    - name: Set up Python 3
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.7
+        python-version: 3
     - run: pip install flake8
     - run: flake8 sdcflows/
